test/files/neg/bug43.scala
case class C[A >: C](x: A) {}
